[package]
name = "atk"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "blocking"] } 
scraper = "0.19"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
colored  = "2.0"
clipboard = "0.5"
